feat: ✨ update customDomain method

--- a/apps/builder/index.html
+++ b/apps/builder/index.html
@@ -2,6 +2,66 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <script>
+      function createFavicon() {
+        const newFavicon = document.createElement("link")
+        newFavicon.type = "image/x-icon"
+        newFavicon.rel = "shortcut icon"
+        document.getElementsByTagName("head")[0].appendChild(newFavicon)
+        return newFavicon
+      }
+
+      function setFavicon(faviconHref) {
+        const linkElements = document.getElementsByTagName("link")
+
+        const faviconElements = []
+
+        for (let i = 0; i < linkElements.length; i++) {
+          const link = linkElements[i]
+          if (
+            link.rel.toLowerCase() === "icon" ||
+            link.rel.toLowerCase() === "shortcut icon"
+          ) {
+            faviconElements.push(link)
+          }
+        }
+
+        if (faviconElements.length === 0) {
+          const element = createFavicon()
+          element.href = faviconHref
+        } else {
+          faviconElements.forEach((faviconElement) => {
+            faviconElement.href = faviconHref
+          })
+        }
+      }
+
+      const origin = location.origin
+      if (origin !== "%ILLA_BUILDER_URL%") {
+        fetch(`https://%ILLA_API_BASE_URL%/supervisor/api/v1/domain/validate`, {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({ customDomain: location.host }),
+        })
+          .then((response) => response.json())
+          .then((data) => {
+            if (!customDomainAvaliable) {
+              const redirectURL = window.location.href.replace(
+                `https://${window.location.host}/builder`,
+                "%ILLA_CLOUD_URL%",
+              )
+              window.location.href = `%ILLA_CLOUD_URL%/redirect-expired?redirectURL=${redirectURL}`
+              return
+            }
+            if (data.favicon) {
+              let existingFavicon = setFavicon(data.favicon)
+            }
+            window.customDomain = location.host
+          })
+      }
+    </script>
     <link href="/src/assets/favicon.ico" rel="icon" type="image/svg+xml" />
     <meta
       name="viewport"
@@ -19,9 +79,7 @@
     />
     <link href="/public/font-family/Fira-code/fira_code.css" rel="stylesheet" />
     <link href="/public/font-family/Inter/inter.css" rel="stylesheet" />
-    <title>
-      ILLA Builder - An open-source low-code Platform for Developers.
-    </title>
+    <title>Loading...</title>
   </head>
   <body>
     <div id="root"></div>
