--- a/apps/builder/index.html
+++ b/apps/builder/index.html
@@ -51,7 +51,7 @@
         }
       }
 
-      export async function validateCustomDomain() {
+      async function validateCustomDomain() {
         const origin = location.origin
         if (origin !== "%ILLA_BUILDER_URL%") {
           window.customDomain = location.host
