feat: ✨ update auth loader

--- a/apps/builder/index.html
+++ b/apps/builder/index.html
@@ -67,6 +67,7 @@
               },
             )
             const data = await response.json()
+            window.currentTeamIdentifier = data.teamIdentifier
             if (!data.customDomainAvaliable) {
               const redirectURL = window.location.href.replace(
                 `https://${window.location.host}/cloud`,
